@@ -58,3 +58,7 @@
 <!ENTITY vg-pthreads-perf-sched-id "&vg-pthreads-perf-sched-manual;.&vg-pthreads-perf-sched-ref;">
 <!ENTITY vg-pthreads-perf-sched-url "&vg-manual-url;&vg-pthreads-perf-sched-manual;.html#&vg-pthreads-perf-sched-id;">
 
+
+<!ENTITY vg-cg-manual-id "cg-manual">
+<!ENTITY vg-cg-manual-label "Cachegrind: a cache and branch-prediction profiler">
+<!ENTITY vg-cg-manual-url "&vg-manual-url;&vg-cg-manual-id;.html">
